# project-cpf-cnpj

./: .gitignore  CMakeLists.txt  N2-AV07.c  README.md  exec  gerador.c  gerador.h  projeto.c  validador.c
src/headers/: validador.h
src/main/: gerador.c  projeto.c  validador.c
